fix profile image size on smaller screens

--- a/scss/media.scss
+++ b/scss/media.scss
@@ -163,10 +163,9 @@
     height: auto;
 
     > img {
-      width: auto;
+      width: 280px;
+      height: 280px;
       max-width: 100%;
-      height: auto;
-      border-radius: 30%;
     }
   }
 
